[package]
name = "indexed-log-map"
version = "1.0.0"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["append-only", "key-value", "storage", "database"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
ciborium = { version = "0.2.0" }
fraos = { version = "0.6.2", path = "../fraos" }
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_json = { version = "1.0" }
sled = { version = "0.34" }

[dev-dependencies]
rand = { version = "0.8" }
tempfile = "3.3.0"
